@@ -14,7 +14,7 @@ Comment: Extra tests for serd (potential contributions to the W3C suites)
 License: BSD-3-Clause OR ISC
 
 Files: AUTHORS NEWS serd.ttl
-Copyright: 2011-2022 David Robillard <d@drobilla.net>
+Copyright: 2011-2023 David Robillard <d@drobilla.net>
 Comment: Contributed to the Commons as a representation of simple facts
 License: 0BSD OR ISC
 
